--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div ng-app="app" class="app">
         <div ng-controller="ContactController as vm">
             <ul>
+              <div ng-repeat="contact in vm.contacts">
                 <li>
                     <h4>Name: {{ contact.name }}</h4>
                     <h6>Phone: {{ contact.phone }}</h6>
 
-                    <a href="">Delete</a>
+                    <a href="#" ng-click="vm.removeContact($index)">Delete</a>
                 </li>
+              </div>
             </ul>
 
             <h2>Add contact</h2>
@@ -24,14 +26,14 @@
             <form>
                 <div>
                     <label>Name</label>
-                    <input />
+                    <input ng-model="vm.name" />
                 </div>
 
                 <div>
                     <label>Phone</label>
-                    <input />
+                    <input ng-model="vm.phoneNumber"/>
                 </div>
-                <button type="submit">Add Contact</button>
+                <button ng-click="vm.addContact(vm.name, vm.phoneNumber)">Add Contact</button>
             </form>
         </div>
     </div>
